Publish SmartIELTS updates
Description: consolidate dashboard, console, record, exam, IELTS module, documentation, SQL migration, smoke script, and test updates for GitHub release.